# tidywizard

./: .gitignore  Makefile  README.md  pyproject.toml
.claude/agents/: data-shape-verifier.md  panta-parser-dev.md  step-scaffolder.md
.streamlit/: config.toml
app/: Home.py
app/pages/: 1_Instruments.py  1_Upload.py  2_Profile.py  3_Clean.py  3_Profile.py  4_Export.py  5_Export.py  5_Instruments.py
core/: __init__.py  export.py  io.py  pipeline.py  profile.py  steps.py
core/instruments/: __init__.py  prometheus_panta.py
docs/plans/: 2026-02-26-prometheus-panta-design.md  2026-02-26-prometheus-panta-implementation.md
examples/: panta_2cap_melting_scan.csv  panta_4cap_melting_scan.csv
sample_data/: messy_people.csv
tests/: conftest.py  test_export.py  test_io.py  test_pipeline_golden.py  test_steps.py
tests/instruments/: test_prometheus_panta.py
